unpackaged/main/default/objects/Ad_Slot_Targeting_Template__c/Ad_Slot_Targeting_Template__c.object-meta.xml
<CustomObject>
    <label>Ad Slot Targeting Template</label>
    <nameField>
        <displayFormat>ASTT-{000000}</displayFormat>
        <label>Ad Slot Targeting Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ad Slot Targeting Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>