unpackaged/main/default/objects/Ad_Slot_Targeting_Template__c/fields/Ad_Slot__c.field-meta.xml
<CustomField>
    <fullName>Ad_Slot__c</fullName>
    <label>Ad Slot</label>
    <referenceTo>csdf__Ad_Slot__c</referenceTo>
    <relationshipLabel>Ad Slot Targeting Templates</relationshipLabel>
    <relationshipName>Ad_Slot_Targeting_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>