unpackaged/main/default/objects/Ad_Slot_Targeting_Template__c/fields/Sizes__c.field-meta.xml
<CustomField>
    <fullName>Sizes__c</fullName>
    <formula>Ad_Slot__r.csdf__Sizes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sizes</label>
    <type>Text</type>
</CustomField>