unpackaged/main/default/objects/Ad_Slot_Targeting_Template__c/fields/Targeting_Template__c.field-meta.xml
<CustomField>
    <fullName>Targeting_Template__c</fullName>
    <label>Targeting Template</label>
    <referenceTo>csdf__Targeting_Template__c</referenceTo>
    <relationshipLabel>Ad Slot Targeting Templates</relationshipLabel>
    <relationshipName>Ad_Slot_Targeting_Templates</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>